tests/NormalTests/paczka1/fuzzy1/14935526.err
Error in line 4: p5kEr8JB S326 -3,1
Error in line 1: p5kEr8JB S326 73,6
Error in line 14: S326 S326 67,3
Error in line 25: jpX9pe S880 89,4
Error in line 29: AHb9g A447 59,6
